# SorobanPulse

./: .env  .env.example  .env.production.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_SUCCESS.md  Dockerfile  EMAIL_FEATURE_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TASKS_242_243.md  LUA_TRANSFORMATION_FEATURE.md  MANUAL_TEST_CHECKLIST.md  Makefile  README.md  TESTING_COMPLETE.md  TEST_RESULTS.md  VALIDATION_SUMMARY.md  build.rs  config.toml.example  docker-compose.test.yml  docker-compose.yml  lefthook.yml  openapi.json  test_email_feature.sh  validate_implementation.ps1
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backup-verify.yml  ci.yml
benches/: compression.rs  db_queries.rs  pagination.rs
docs/: alerts.yml  api-versioning.md  deployment.md  email-notifications.md  email-quick-start.md  grafana-dashboard.json  lua-transformation.md  openapi.json  schema.md
examples/: simple_filter.lua  transform_example.lua
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_pagination_params.rs  fuzz_validate_contract_id.rs  fuzz_validate_tx_hash.rs
helm/soroban-pulse/: Chart.yaml  values.yaml
helm/soroban-pulse/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml
migrations/: 20260314000000_create_events.down.sql  20260325000000_optimize_ledger_index.down.sql  20260325000001_composite_indices.down.sql  20260425000001_event_data_validation.down.sql  20260425000001_event_data_validation.sql  20260426000000_create_indexer_checkpoints.down.sql  20260426000000_create_indexer_checkpoints.sql  20260427000000_add_schema_version.down.sql  20260427000000_add_schema_version.sql  20260427000000_event_data_compression.down.sql  20260427000000_event_data_compression.sql  20260427000000_normalization.down.sql  20260427000000_normalization.sql  20260427000001_subscriptions.down.sql  20260427000001_subscriptions.sql  20260427000002_contract_schemas.down.sql  20260427000002_contract_schemas.sql  20260427000002_create_indexer_state.down.sql  20260427000002_create_indexer_state.sql  20260427000002_event_data_size_limit.down.sql  20260427000002_event_data_size_limit.sql  20260427000002_in_successful_call.down.sql  20260427000002_in_successful_call.sql  20260427000003_ledger_hash.down.sql  20260427000003_ledger_hash.sql  20260427000004_contract_abis.down.sql  20260427000004_contract_abis.sql  20260427000005_cursor_pagination_index.down.sql  20260427000005_cursor_pagination_index.sql  20260428000000_topic_0_sym.down.sql  20260428000000_topic_0_sym.sql  20260428000001_anonymized.down.sql  20260428000001_anonymized.sql  20260428000002_matview_daily_summary.sql  20260428000003_matview_contract_summary.sql  20260428000004_matview_hourly_volume.sql
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/.openapi-generator/: FILES
sdk/python/docs/: ContractSummary.md  Event.md  EventType.md  EventsApi.md  PaginationParams.md  SystemApi.md
sdk/python/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
sdk/python/openapi_client/api/: __init__.py  events_api.py  system_api.py
sdk/python/openapi_client/models/: __init__.py  contract_summary.py  event.py  event_type.py  pagination_params.py
sdk/python/test/: test_contract_summary.py  test_event.py  test_event_type.py  test_events_api.py  test_pagination_params.py  test_system_api.py
sdk/typescript/: README.md  runtime.ts
sdk/typescript/.openapi-generator/: FILES
sdk/typescript/apis/: EventsApi.ts  SystemApi.ts  index.ts
sdk/typescript/docs/: ContractSummary.md  Event.md  EventType.md  EventsApi.md  PaginationParams.md  SystemApi.md
sdk/typescript/models/: ContractSummary.ts  Event.ts  EventType.ts  PaginationParams.ts  index.ts
src/: archiver.rs  bloom_filter.rs  config.rs  db.rs  email.rs  encryption.rs  error.rs  handlers.rs  index_monitor.rs  indexer.rs  kafka.rs  kinesis.rs  lib.rs  lua_transform.rs  main.rs  metrics.rs  middleware.rs  models.rs  normalizer.rs  parquet_export.rs  pubsub.rs  queue_publisher.rs  routes.rs  rpc_client.rs  schema_validator.rs  stats_refresh.rs  subscriptions.rs  webhook.rs  xdr_validation.rs
tests/: email_notification_tests.rs  integration_tests.rs  redis_publisher_tests.rs  resilience.rs  schema_validation_tests.rs
tests/load/: sse_stream.js
tests/resilience/: mod.rs
