[package]
name = "soroban-pulse"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "json", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = { version = "0.22", optional = true }
opentelemetry = { version = "0.21", optional = true }
opentelemetry-otlp = { version = "0.14", optional = true }
dotenvy = "0.15"
toml = "0.8"
thiserror = "1"
utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono"] }
anyhow = "1"
futures = "0.3"
url = "2"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "compression-full", "metrics", "request-id", "limit"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
axum-extra = { version = "0.9", features = ["typed-header"] }
async-trait = "0.1"
tower_governor = { version = "0.8", features = ["axum"] }
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
rdkafka = { version = "0.36", optional = true, features = ["cmake-build"] }

[features]
otel = ["tracing-opentelemetry", "opentelemetry", "opentelemetry-otlp"]
encryption = ["aes-gcm", "rand"]
kafka = ["rdkafka"]

[dev-dependencies]
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "json", "migrate"] }
async-trait = "0.1"
criterion = { version = "0.5", features = ["html_reports"] }
http-body-util = "0.1"
tempfile = "3"
flate2 = "1"

[[bench]]
name = "pagination"
harness = false

[[bench]]
name = "db_queries"
harness = false

[[bench]]
name = "compression"
harness = false
