[package]
name = "soroban-pulse-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
soroban-pulse = { path = "..", features = [] }
serde_json = "1"

# Prevent this from interfering with the workspace
[workspace]

[[bin]]
name = "fuzz_validate_contract_id"
path = "fuzz_targets/fuzz_validate_contract_id.rs"
test = false
doc = false

[[bin]]
name = "fuzz_validate_tx_hash"
path = "fuzz_targets/fuzz_validate_tx_hash.rs"
test = false
doc = false

[[bin]]
name = "fuzz_pagination_params"
path = "fuzz_targets/fuzz_pagination_params.rs"
test = false
doc = false
